using UnityEngine;
using UnityEngine.InputSystem;
using System.Collections;
using System.Collections.Generic; 

public class SamuraiControl : MonoBehaviour
{
    [Header("Configuraci칩n Visual")]
    public float escalaPersonaje = 1.5f;

    [Header("Movimiento")]
    public float velocidad = 5f;

    [Header("Combate: Espada 丘덢잺")]
    public Transform puntoAtaque;
    public float rangoEspada = 0.8f; 
    public float danoEspada = 10f; // <--- SE MEJORAR츼 AUTOM츼TICAMENTE
    public float tiempoRetrasoEspada = 0.3f; 

    [Header("Combate: Arco 游낓")]
    public Transform puntoDisparo; 
    public GameObject flechaPrefab; 
    public float rangoArco = 8f; 
    public float fuerzaDisparo = 15f; 
    public float tiempoRetrasoArco = 0.5f; 
    public float alturaApuntado = 0.8f;

    // 游댠 VARIABLE PRIVADA PARA EL DA칌O DEL ARCO 游댠
    private float danoArco = 10f; // Base 10, sube con mejoras

    [Header("General")]
    public LayerMask capaEnemigos; 
    public float tiempoEntreAtaques = 1.0f;

    private Rigidbody2D miCuerpo;
    private Animator miAnimator;
    private InputSystem_Actions controles;
    private Vector2 entradaMovimiento;
    
    private float tiempoSiguienteAtaque = 0f;
    
    [Header("Audio 游댉")]
    public AudioSource miAudioSource; 
    public AudioClip sonidoEspada;    
    public AudioClip sonidoArco;      

    void Awake()
    {
        miCuerpo = GetComponent<Rigidbody2D>();
        miAnimator = GetComponent<Animator>();
        controles = new InputSystem_Actions();

        controles.Player.Move.performed += ctx => entradaMovimiento = ctx.ReadValue<Vector2>();
        controles.Player.Move.canceled += ctx => entradaMovimiento = Vector2.zero;

        // 游댠 APLICAR MEJORAS AL DESPERTAR 游댠
        AplicarMejorasSamurai();
    }

    // --- 游 FUNCI칍N DE MEJORA DEL H칄ROE ---
    void AplicarMejorasSamurai()
{
    // 1. MEJORA DE KATANA (Aumentamos el da침o significativamente)
    int nivelKatana = DatosJugador.ObtenerNivelMejora("Katana");
    if (nivelKatana > 1)
    {
        // 游댠 Da침o: Subimos de 10 a 25. 
        // En Nivel 3 tendr치 +50 de da침o, ideal para compensar los +200 HP de los zombis.
        danoEspada += (nivelKatana - 1) * 25f;
        
        // 游댠 Velocidad: Subimos a 0.7 para que pueda esquivar y posicionarse r치pido.
        velocidad += (nivelKatana - 1) * 0.7f;
        
        Debug.Log("丘덢잺 Samur치i Maestro Lv." + nivelKatana + " | Da침o Katana: " + danoEspada);
    }

    // 2. MEJORA DE ARCO (Ahora m치s letal que la arquera b치sica)
    int nivelArco = DatosJugador.ObtenerNivelMejora("Arco");
    if (nivelArco > 1)
    {
        // 游댠 Da침o: Subimos de 8 a 15.
        danoArco += (nivelArco - 1) * 15f;
        
        // 游댠 Rango: Subimos a 1.0 metro extra para disparar desde lejos.
        rangoArco += (nivelArco - 1) * 1.0f;

        Debug.Log("游낓 Samur치i Arquero Lv." + nivelArco + " | Da침o Flecha: " + danoArco);
    }
}

    void FixedUpdate()
    {
        // 1. MOVIMIENTO
        miCuerpo.linearVelocity = new Vector2(entradaMovimiento.x * velocidad, miCuerpo.linearVelocity.y);

        if (entradaMovimiento.x != 0)
        {
            miAnimator.SetBool("Walking", true);
            
            if (entradaMovimiento.x > 0) 
                transform.localScale = new Vector3(escalaPersonaje, escalaPersonaje, 1);
            else if (entradaMovimiento.x < 0) 
                transform.localScale = new Vector3(-escalaPersonaje, escalaPersonaje, 1);
        }
        else
        {
            miAnimator.SetBool("Walking", false);
            transform.localScale = new Vector3(escalaPersonaje, escalaPersonaje, 1);
        }

        // 2. BLOQUEO
        if (entradaMovimiento.x != 0 || 
            Time.time < tiempoSiguienteAtaque ||
            miAnimator.GetCurrentAnimatorStateInfo(0).IsName("Attack") || 
            miAnimator.GetCurrentAnimatorStateInfo(0).IsName("Distance"))
        {
            return; 
        }

        // 3. INTENTAR ATACAR
        IntentarAutoAtaque();
    }

    void IntentarAutoAtaque()
    {
        // PRIORIDAD 1: ESPADA
        Collider2D enemigoMuyCerca = Physics2D.OverlapCircle(puntoAtaque.position, rangoEspada, capaEnemigos);

        if (enemigoMuyCerca != null)
        {
            miAnimator.SetTrigger("Attack"); 
            StartCoroutine(LogicaEspada());
            
            miCuerpo.linearVelocity = Vector2.zero; 
            tiempoSiguienteAtaque = Time.time + tiempoEntreAtaques;
            return; 
        }

        // PRIORIDAD 2: ARCO
        Collider2D[] enemigosLejos = Physics2D.OverlapCircleAll(puntoAtaque.position, rangoArco, capaEnemigos);

        foreach (Collider2D enemigo in enemigosLejos)
        {
            if (enemigo != null && EstaEnFrente(enemigo.transform))
            {
                miAnimator.SetTrigger("Shoot");
                StartCoroutine(LogicaArco(enemigo.transform));
                
                miCuerpo.linearVelocity = Vector2.zero;
                tiempoSiguienteAtaque = Time.time + tiempoEntreAtaques;
                return; 
            }
        }
    }

    bool EstaEnFrente(Transform objetivo)
    {
        float miDireccion = transform.localScale.x;
        float direccionEnemigo = objetivo.position.x - puntoAtaque.position.x; 
        return (miDireccion * direccionEnemigo) > 0;
    }

    IEnumerator LogicaEspada()
    {
        if (miAudioSource != null && sonidoEspada != null)
        {
            miAudioSource.PlayOneShot(sonidoEspada); 
        }

        yield return new WaitForSeconds(tiempoRetrasoEspada);
        
        Collider2D[] enemigosGolpeados = Physics2D.OverlapCircleAll(puntoAtaque.position, rangoEspada, capaEnemigos);
        
        List<GameObject> enemigosYaGolpeados = new List<GameObject>(); 

        foreach (Collider2D enemigo in enemigosGolpeados)
        {
            // Verificamos que no hayamos cortado ya a este enemigo en este mismo espadazo
            if (!enemigosYaGolpeados.Contains(enemigo.gameObject))
            {
                // 游댠 CAMBIO 2: SendMessage universal
                // "Oye t칰, seas Zombi Normal, Fantasma o Arquero, c칩mete este da침o"
                enemigo.gameObject.SendMessage("RecibirDano", danoEspada, SendMessageOptions.DontRequireReceiver);
                
                // Lo a침adimos a la lista para no volver a da침arlo en este frame
                enemigosYaGolpeados.Add(enemigo.gameObject);
            }
        }
    }

    IEnumerator LogicaArco(Transform objetivo)
    {
        if (miAudioSource != null && sonidoArco != null)
        {
            miAudioSource.PlayOneShot(sonidoArco);
        }

        yield return new WaitForSeconds(tiempoRetrasoArco);

        Vector3 posicionDestino;
        
        if (objetivo != null)
        {
            posicionDestino = objetivo.position + new Vector3(0, alturaApuntado, 0); 
        }
        else
        {
            float dire = transform.localScale.x > 0 ? 1 : -1;
            posicionDestino = puntoDisparo.position + new Vector3(dire * 10, 0, 0);
        }

        Vector2 direccionFinal = (posicionDestino - puntoDisparo.position).normalized;

        GameObject nuevaFlecha = Instantiate(flechaPrefab, puntoDisparo.position, Quaternion.identity);
        
        // --- 游댠 PASAR EL DA칌O MEJORADO A LA FLECHA 游댠 ---
        Proyectil scriptFlecha = nuevaFlecha.GetComponent<Proyectil>();
        if (scriptFlecha != null)
        {
            scriptFlecha.da침o = this.danoArco; // Inyectamos el da침o calculado
        }
        // ------------------------------------------------

        Rigidbody2D rbFlecha = nuevaFlecha.GetComponent<Rigidbody2D>();
        
        if (rbFlecha != null)
        {
            nuevaFlecha.transform.right = direccionFinal;
            rbFlecha.gravityScale = 0f; 
            rbFlecha.linearVelocity = direccionFinal * fuerzaDisparo;
        }
    }

    void OnDrawGizmosSelected()
    {
        if (puntoAtaque == null) return;
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(puntoAtaque.position, rangoEspada);
        Gizmos.color = Color.yellow;
        Gizmos.DrawWireSphere(puntoAtaque.position, rangoArco);
    }

    void OnEnable() { controles.Enable(); }
    void OnDisable() { controles?.Disable(); }
}